force-app/main/default/objects/custom_create284__c/custom_create284__c.object-meta.xml
<CustomObject>
    <label>Custom created object284</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects284</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>