force-app/main/default/objects/custom_create284__c/fields/custom_create_284field584__c.field-meta.xml
<CustomField>
    <fullName>custom_create_284field584__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 284field584</label>
    <type>Checkbox</type>
</CustomField>