force-app/main/default/objects/custom_create284__c/fields/custom_create_284field618__c.field-meta.xml
<CustomField>
    <fullName>custom_create_284field618__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 284field618</label>
    <type>Checkbox</type>
</CustomField>